objects/Notification__c.object
<CustomObject>
    <fields>
        <fullName>Delivered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delivered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Preference__c</fullName>
        <formula>If(INCLUDES( Receipient__r.Notification_Platform__c , 'Email'),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Preference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notification_Type__c</fullName>
        <label>Notification Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receipient</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recipient_CEC_ID__c</fullName>
        <formula>LEFT(Receipient__r.Username,Find("@",  Receipient__r.Username)-1)</formula>
        <label>Recipient CEC ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Body__c</fullName>
        <label>Request Body</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WebEx_Team_Preference__c</fullName>
        <formula>If(INCLUDES( Receipient__r.Notification_Platform__c , 'WebEx Teams'),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WebEx Team Preference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sObject__c</fullName>
        <label>sObject</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Request and Response from NAAS API for notification will be stored here</description>
    <label>Notification</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Notification ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Receipient__c</columns>
        <columns>Request_Body__c</columns>
        <columns>Response__c</columns>
        <columns>sObject__c</columns>
        <columns>Delivered__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>